plang/testing/logs/false-incorrect/187/program187.p.p
w.
xY PRNU.
l1V (PAwi1) oN.

f.

nrUGN.

gH9v :- (mFhX; tyC (DW) ese0 (e16Uu), (uZE (KZB) q jlfrS GDw); k; lX (sks MJR7v (GDxkq) e4o) (s7Dnv eXaA) f3; hUrJz; g E; lG tb (hAD PkH (DXB) DFnl) rbY8k R; hj F3bAP).


eDHO5 (x G (aWBWR IF) z09M (yJ4 (eIFj PwMrB (dDC CXzZ (tnN h9D) (S1vV) (zu (BC6jI) Lz))) XZbO4)) (OEz0) :- (d (A) NRLf8, c3 (o) TB Bjai).
? ruGrz.

